--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 	<link rel="stylesheet" href="css/brands.css" />
 	<link rel="stylesheet" href="css/solid.css" />
 
-	<!-- Theme Colors
-	<link rel="stylesheet" href="css/theme-colors/blue.css" />
+	 Theme Colors
+	<!--<link rel="stylesheet" href="css/theme-colors/blue.css" />
 	<link rel="stylesheet" href="css/theme-colors/green.css" />
 	<link rel="stylesheet" href="css/theme-colors/orange.css" />
 	<link rel="stylesheet" href="css/theme-colors/brown.css" />
@@ -36,9 +36,8 @@
 	<link rel="stylesheet" href="css/theme-colors/red.css" />
 	<link rel="stylesheet" href="css/theme-colors/beige.css" />
 	<link rel="stylesheet" href="css/theme-colors/green_light.css" />
-	<link rel="stylesheet" href="css/theme-colors/yellow.css" />
 	<link rel="stylesheet" href="css/theme-colors/yellow_light.css" />
-	-->
+	<link rel="stylesheet" href="css/theme-colors/yellow.css" /> -->
 		
 	<!--[if lt IE 9]>
 	<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
@@ -111,31 +110,16 @@
 								</li>
 								<li class="menu-item menu-item-has-children">
 									<a href="works_creative.html">Portfolio</a>
-									<ul class="sub-menu">
-										<li class="menu-item"><a href="works_creative.html">Responsive Websites</a></li>
-										<!--<li class="menu-item"><a href="works_creative.html">HTML Emails</a></li>-->
-										<!--<li class="menu-item"><a href="work_single.html">Projects</a></li>-->
-									</ul>
-										<li class="menu-item menu-item-has-children">
-												<a href="contacts_image.html">Contact</a>
-										<!-- <li class="menu-item"><a href="work_single_image.html">Work Single Image</a></li>
-										<li class="menu-item"><a href="work_single_creative.html">Work Single Creative</a></li>
-									</ul>
-								</li>
+									
 								<li class="menu-item menu-item-has-children">
 									<a href="contacts.html">Contact</a>
-									<ul class="sub-menu">
-										<li class="menu-item"><a href="contacts.html">Contact Default</a></li>
-										<li class="menu-item"><a href="contacts_map.html">Contact Map</a></li>
-										<li class="menu-item"><a href="contacts_image.html">Contact Image</a></li>
-										<li class="menu-item"><a href="contacts_creative.html">Contact Creative</a></li>
-									</ul>
+									
 								</li>
 							</ul>
 						</div>
 					</div>
 				</div>
-			-->
+			
 			</div>
 		</header>
 		
