--- a/contacts_image.html
+++ b/contacts_image.html
@@ -97,11 +97,11 @@
 								</li>
 								<li class="menu-item menu-item-has-children">
 									<a href="works_creative.html">Portfolio</a>
-									<ul class="sub-menu">
+									<!--<ul class="sub-menu">
 											<li class="menu-item"><a href="works.html">Responsive Websites</a></li>
-											<!--<li class="menu-item"><a href="works_creative.html">HTML Emails</a></li>
-                                            <li class="menu-item"><a href="work_single.html">Projects</a></li>-->
-									</ul>
+											<li class="menu-item"><a href="works_creative.html">HTML Emails</a></li>
+                                            <li class="menu-item"><a href="work_single.html">Projects</a></li>
+									</ul>-->
 									
 								</li>
 								<li class="menu-item menu-item-has-children">
