--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<link rel="stylesheet" href="css/fontawesome.css" />
 	<link rel="stylesheet" href="css/brands.css" />
 	<link rel="stylesheet" href="css/solid.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 
 	 
 	<!--<link rel="stylesheet" href="css/theme-colors/blue.css" />
@@ -76,7 +77,7 @@
 				<a href="#" class="menu-btn"><span></span></a>
 
 				<!-- logo -->
-				<div class="logo hover-masks-logo">
+				<div class="logo hover-masks-logo animated bounceIn delay-4s">
 					<a href="#">
 						<span class="mask-lnk">Anthony <strong>Smith</strong></span>
 						<!-- <span class="mask-lnk mask-lnk-hover">Download <strong>CV</strong></span> -->
@@ -84,7 +85,7 @@
 				</div>
 				
 				<!-- top menu -->						
-				<div class="top-menu hover-masks">
+				<div class="top-menu hover-masks animated fadeIn delay-4s">
 					<div class="top-menu-nav">	
 						<div class="menu-topmenu-container">
 							<ul class="menu">
@@ -140,7 +141,7 @@
 				<div class="centrize full-width">
 					<div class="vertical-center">
 						<div class="started-content">
-							<h1 class="h-title">
+							<h1 class="h-title animated fadeIn delay-5s">
 								Hello, I’m <strong>Anthony Smith</strong>, a Front-End Web Developer <br />
 								and Designer based in Grand Rapids, Michigan. 
 							</h1>
@@ -162,10 +163,10 @@
 		<!-- Footer -->
 		<footer class="footer">
 			<div class="copy">
-				<p>E: anthony.smith@gmail.com</p>
-				<p>Contact me today to build your next project</p>
+				<p class="animated fadeIn delay-5s">E: anthony.smith@gmail.com</p>
+				<p class="animated fadeIn delay-5s">Contact me today to build your next project</p>
 			</div>
-			<div class="soc-box">
+			<div class="soc-box animated flipInY delay-5s">
 				<div class="follow-label">View My Live Code on Github</div>
 				<div class="soc">
 					<a target="_blank" href="https://github.com/anthonys1760?tab=repositories">
