--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 				<!-- background -->
 				
-				<div autoplay="autoplay" loop="loop" playsinline loop muted id="started-video-bg" class="video-bg media-bg jarallax-video video-mobile-bg" data-jarallax-video="https://youtu.be/KGlWaG4N4L8" data-mobile-preview="images/started_image_p.jpg" data-volume="0">
+				<div autoplay="autoplay" loop="loop" playsinline loop muted id="started-video-bg" class="video-bg media-bg jarallax-video video-mobile-bg" data-jarallax-video="https://youtu.be/XNnRTd6hfV4" data-mobile-preview="images/started_image_p.jpg" data-volume="0">
 					<div class="video-bg-mask"></div>
 					<div class="video-bg-texture" id="grained_container"></div>
 				</div>
@@ -163,8 +163,7 @@
 		<!-- Footer -->
 		<footer class="footer">
 			<div class="copy">
-				<p class="animated fadeIn delay-5s">E: anthony.smith@gmail.com</p>
-				<p class="animated fadeIn delay-5s">Contact me today to build your next project</p>
+				<p class="animated fadeIn delay-5s">Copyright © 2019 Website by Anthony Smith</p>
 			</div>
 			<div class="soc-box animated flipInY delay-5s">
 				<div class="follow-label">View My Live Code on Github</div>
