--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 				<!-- started content -->
 				<div class="centrize full-width">
 					<div class="vertical-center">
-						<div class="started-content">
+						<div class="started-content delay-5s">
 							<h1 class="h-title animated fadeIn delay-5s">
 								Hello, I’m <strong>Anthony Smith</strong>, a Front-End Web Developer <br />
 								and Designer based in Grand Rapids, Michigan. 
@@ -155,7 +155,7 @@
 						</div>
 					</div>
 				</div>
-
+				
 			</div>
 
 		</div>
@@ -163,7 +163,7 @@
 		<!-- Footer -->
 		<footer class="footer">
 			<div class="copy">
-				<p class="animated fadeIn delay-5s">Copyright © 2019 Website by Anthony Smith</p>
+				<p class="animated fadeIn delay-3s">Copyright © 2019 Website by Anthony Smith</p>
 			</div>
 			<div class="soc-box animated flipInY delay-5s">
 				<div class="follow-label">View My Live Code on Github</div>
