--- a/about.html
+++ b/about.html
@@ -170,9 +170,9 @@
 				<div class="content content-box">
 
 					<!-- image -->
-					<div class="image">
+					<!-- <div class="image">
 						<img src="images/man2.jpg" alt="" />
-					</div>
+					</div> -->
 
 					<!-- desc -->
 					<div class="desc">
