--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
 			<div class="section started layout-creative" id="section-started">
 
 				<!-- background -->
-				<div autoplay="autoplay" loop="loop" playsinline loop muted id="started-video-bg" class="video-bg media-bg jarallax-video video-mobile-bg" data-jarallax-video="https://youtu.be/KGlWaG4N4L8" data-mobile-preview="images/started_image_p.jpg" data-volume="0">
+				<div autoplay="autoplay" loop="loop" playsinline loop muted id="started-video-bg" class="video-bg media-bg jarallax-video video-mobile-bg" data-jarallax-video="https://youtu.be/rVVv5kUoxME" data-mobile-preview="images/started_image_p.jpg" data-volume="0">
 					<div class="video-bg-mask"></div>
 					<div class="video-bg-texture" id="grained_container"></div>
 				</div>
