--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-	<link href="/C:\Users\Anthony\Desktop\anthonys1760.github.io-master/favicon.ico" rel="icon" type="image/x-icon" />
+	<link href="favicon.ico" rel="icon" type="image/x-icon" />
 	<link rel="shortcut icon" href="images/favicons/favicon.ico">
 
 </head>
