--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 									<a href="works_creative.html">Portfolio</a>
 									
 								<li class="menu-item menu-item-has-children">
-									<a href="contacts.html">Contact</a>
+									<a href="contacts_image.html">Contact</a>
 									
 								</li>
 							</ul>
@@ -142,7 +142,7 @@
 					<div class="vertical-center">
 						<div class="started-content delay-5s">
 							<h1 class="h-title animated fadeIn delay-5s">
-								Hello, I’m <strong>Anthony Smith</strong>, a Front-End Web Developer <br />
+								Hey, I’m <strong>Anthony Smith</strong>, a Front-End Web Developer <br />
 								and Designer based in Grand Rapids, Michigan. 
 							</h1>
 							<div class="h-subtitle typing-subtitle">
