--- a/about.html
+++ b/about.html
@@ -137,7 +137,7 @@
 			<div class="section started layout-creative" id="section-started">
 
 				<!-- background -->
-				<div autoplay="autoplay" loop="loop" playsinline loop muted id="started-video-bg" class="video-bg media-bg jarallax-video video-mobile-bg" data-jarallax-video="https://youtu.be/rVVv5kUoxME" data-mobile-preview="images/started_image_p.jpg" data-volume="0">
+				<div autoplay="autoplay" loop="loop" playsinline loop muted id="started-video-bg" class="video-bg media-bg jarallax-video video-mobile-bg" data-jarallax-video="https://youtu.be/DS5boul4QqE" data-mobile-preview="images/started_image_p.jpg" data-volume="0">
 					<div class="video-bg-mask"></div>
 					<div class="video-bg-texture" id="grained_container"></div>
 				</div>
@@ -175,7 +175,7 @@
 
 					<!-- desc -->
 					<div class="desc">
-						<p>Hello! I'm a Front-End Web Developer that has experience working on everything from small business websites to mid-high volume media applications. I have been working professionally as a front end developer for nearly 4 years. I'm comfortable doing everything from basic HTML coding tasks all the way to custom Javascript and more.</p>
+						<p class="animated fadeIn delay-5s">Hello! I'm a Front-End Web Developer that has experience working on everything from small business websites to mid-high volume media applications. I have been working professionally as a front end developer for nearly 4 years. I'm comfortable doing everything from basic HTML coding tasks all the way to custom Javascript and more.</p>
 						<div class="info-list">
 							<ul>
 					
