--- a/contacts_image.html
+++ b/contacts_image.html
@@ -125,7 +125,7 @@
 			<div class="section started section-title" id="section-started">
 
 				<!-- background -->
-				<div autoplay="autoplay" loop="loop" playsinline loop muted id="started-video-bg" class="video-bg media-bg jarallax-video video-mobile-bg" data-jarallax-video="https://youtu.be/XNnRTd6hfV4" data-mobile-preview="images/started_image_p.jpg" data-volume="0">
+				<div autoplay="autoplay" loop="loop" playsinline loop muted id="started-video-bg" class="video-bg media-bg jarallax-video video-mobile-bg" data-jarallax-video="https://youtu.be/DS5boul4QqE" data-mobile-preview="images/started_image_p.jpg" data-volume="0">
 					<div class="video-bg-mask"></div>
 					<div class="video-bg-texture" id="grained_container"></div>
 				</div>
@@ -135,6 +135,7 @@
 					<div class="vertical-center">
 						<div class="started-content">
 							<h1 class="h-title">Contact</h1>
+							
 							<div class="h-subtitles">
 								<div class="h-subtitle typing-bread">
 									<p class="breadcrumbs">
