--- a/works_creative.html
+++ b/works_creative.html
@@ -466,7 +466,7 @@
 
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/JS-Drum-Machine/" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://anthonys1760.github.io/jsandcssclock/" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/responsive8.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
@@ -474,7 +474,7 @@
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
 													<span class="category">HTML/CSS/Bootstrap 4 Project</span>
-													<span class="name">JS Drum Machine</span>
+													<span class="name">JS Clock</span>
 												</span>
 											</span>
 										</span>
