--- a/works_creative.html
+++ b/works_creative.html
@@ -187,65 +187,15 @@
 
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/bootstrap4-responsive-project/" target="_blank" class="has-popup-gallery hover-animated">
-									<img src="images/bootstrapresponsive.jpg" class="wp-post-image" alt="" />
+								<a href="https://www.skynetdigital.net" target="_blank" class="has-popup-gallery hover-animated">
+									<img src="images/skynet1.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Project</span>
-													<span class="name">Bootstrap 4 Responsive Website</span>
-												</span>
-											</span>
-										</span>
-									</span>
-								</a>
-								<div id="gallery-1" class="mfp-hide">
-									<a href="images/work1.jpg"></a>
-									<a href="images/work2.jpg"></a>
-									<a href="images/work3.jpg"></a>
-									<a href="images/work4.jpg"></a>
-								</div>	
-							</div>
-						</div>
-
-						<div class="box-item f-gallery">
-							<div class="image">
-								<a href="https://anthonys1760.github.io/parallax-website/" target="_blank" class="has-popup-gallery hover-animated">
-									<img src="images/parallax.jpg" class="wp-post-image" alt="" />
-									<span class="info circle">
-										<span class="centrize full-width">
-											<span class="vertical-center">
-												<span class="icon fas fa-images"></span>
-												<span class="desc">
-													<span class="category">Project</span>
-													<span class="name">Parallax Website</span>
-												</span>
-											</span>
-										</span>
-									</span>
-								</a>
-								<div id="gallery-1" class="mfp-hide">
-									<a href="images/work1.jpg"></a>
-									<a href="images/work2.jpg"></a>
-									<a href="images/work3.jpg"></a>
-									<a href="images/work4.jpg"></a>
-								</div>	
-							</div>
-						</div>
-
-						<div class="box-item f-gallery">
-							<div class="image">
-								<a href="https://anthonys1760.github.io/Facebook-Clone/" target="_blank" class="has-popup-gallery hover-animated">
-									<img src="images/facebookclone.jpg" class="wp-post-image" alt="" />
-									<span class="info circle">
-										<span class="centrize full-width">
-											<span class="vertical-center">
-												<span class="icon fas fa-images"></span>
-												<span class="desc">
-													<span class="category">Mockup</span>
-													<span class="name">Facebook Clone</span>
+													<span class="category">Live Client Website</span>
+													<span class="name">Skynet Digital Agency</span>
 												</span>
 											</span>
 										</span>
@@ -269,7 +219,7 @@
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Project</span>
+													<span class="category">Live Client Website</span>
 													<span class="name">The Great RGB Color Game</span>
 												</span>
 											</span>
@@ -319,7 +269,7 @@
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Project</span>
+													<span class="category">Live Client Website</span>
 													<span class="name">Fylo Landing Page</span>
 												</span>
 											</span>
@@ -344,7 +294,7 @@
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Project</span>
+													<span class="category">HTML/CSS/Bootstrap 4 Project</span>
 													<span class="name">RSVP App</span>
 												</span>
 											</span>
@@ -369,7 +319,7 @@
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Project</span>
+													<span class="category">HTML/CSS/Bootstrap 4 Project</span>
 													<span class="name">JS Drum Machine</span>
 												</span>
 											</span>
@@ -516,15 +466,15 @@
 
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/jsandcssclock/" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://anthonys1760.github.io/JS-Drum-Machine/" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/responsive8.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Project</span>
-													<span class="name">JS Clock</span>
+													<span class="category">HTML/CSS/Bootstrap 4 Project</span>
+													<span class="name">JS Drum Machine</span>
 												</span>
 											</span>
 										</span>
@@ -750,7 +700,7 @@
 	</div>
 <hr>
 	<footer>
-		<p align="center";>Copyright © 2020 Website Developed by Anthony Smith</p>
+		<p align="center";>Copyright © 2019 Website Developed by Anthony Smith</p>
 	</footer>
 
 	<!-- Scripts -->
