--- a/index.html
+++ b/index.html
@@ -142,14 +142,18 @@
 					<div class="vertical-center">
 						<div class="started-content delay-5s">
 							<h1 class="h-title animated fadeIn delay-5s">
-								Hey, I’m <strong>Anthony Smith</strong>, a Front-End Web Developer <br />
+								Hi, I’m <strong>Anthony</strong>, a Front-End Web Developer <br />
 								and Designer based in Grand Rapids, Michigan. 
 							</h1>
 							<div class="h-subtitle typing-subtitle">
-								<p>I code cool <strong>websites</strong></p>
-								<p>I develop <strong>mobile apps</strong></p>
-								<p>I love <strong>javascript</strong></p>
-								<p>I solve <strong>problems</strong></p>
+								<p>Hello. </p>
+									<p>Welcome to my <strong>Portfolio </strong></p>
+									<p>My name is <strong>Anthony Smith</strong></p>
+									<p>I code cool <strong>websites</strong></p>
+									<p>I develop <strong>web apps</strong></p>
+									<p>I love <strong>javascript</strong></p>
+									<p>I learn <strong>everyday</strong></p>
+									<p>I solve <strong>problems</strong></p>
 							</div>
 							<span class="typed-subtitle"></span>
 						</div>
@@ -163,7 +167,7 @@
 		<!-- Footer -->
 		<footer class="footer">
 			<div class="copy">
-				<p class="animated fadeIn delay-3s">Copyright © 2019 Website by Anthony Smith</p>
+				<p class="animated fadeIn delay-3s">Copyright © 2020 Website by Anthony Smith</p>
 			</div>
 			<div class="soc-box animated flipInY delay-5s">
 				<div class="follow-label">View My Live Code on Github</div>
