--- a/works_creative.html
+++ b/works_creative.html
@@ -187,6 +187,30 @@
 					
 					<!-- portfolio items -->
 					<div class="box-items portfolio-items">
+						<div class="box-item f-gallery">
+							<div class="image">
+								<a href="https://anthonys1760.github.io/Netflix-Landing-Page/" target="_blank" class="has-popup-gallery hover-animated">
+									<img src="images/responsive.jpg" class="wp-post-image" alt="" />
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-images"></span>
+												<span class="desc">
+													<span class="category">Project</span>
+													<span class="name">Netflix Landing Page Redesign</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+								<div id="gallery-1" class="mfp-hide">
+									<a href="images/work1.jpg"></a>
+									<a href="images/work2.jpg"></a>
+									<a href="images/work3.jpg"></a>
+									<a href="images/work4.jpg"></a>
+								</div>	
+							</div>
+						</div>
 
 						<div class="box-item f-gallery">
 							<div class="image">
@@ -389,7 +413,7 @@
 						</div>
 
 
-						<div class="box-item f-gallery">
+						<!-- <div class="box-item f-gallery">
 							<div class="image">
 								<a href="https://anthonys1760.github.io/feedsterjQueryProject/" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/feedstersite.jpg" class="wp-post-image" alt="" />
@@ -412,11 +436,11 @@
 									<a href="images/work4.jpg"></a>
 								</div>	
 							</div>
-						</div>
+						</div> -->
 
 						
 
-						<div class="box-item f-gallery">
+						<!-- <div class="box-item f-gallery">
 							<div class="image">
 								<a href="https://anthonys1760.github.io/jquerygameboard/"_blank" class="has-popup-gallery hover-animated">
 									<img src="images/gameboard.jpg" class="wp-post-image" alt="" />
@@ -439,7 +463,7 @@
 									<a href="images/work4.jpg"></a>
 								</div>	
 							</div>
-						</div>
+						</div> -->
 
 						<div class="box-item f-gallery">
 							<div class="image">
@@ -528,6 +552,31 @@
 												<span class="desc">
 													<span class="category">Project</span>
 													<span class="name">JS Clock</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+								<div id="gallery-1" class="mfp-hide">
+									<a href="images/work1.jpg"></a>
+									<a href="images/work2.jpg"></a>
+									<a href="images/work3.jpg"></a>
+									<a href="images/work4.jpg"></a>
+								</div>	
+							</div>
+						</div>
+
+						<div class="box-item f-gallery">
+							<div class="image">
+								<a href="https://anthonys1760.github.io/Todo-App/" target="_blank" class="has-popup-gallery hover-animated">
+									<img src="images/todo.jpg" class="wp-post-image" alt="" />
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-images"></span>
+												<span class="desc">
+													<span class="category">Project</span>
+													<span class="name">Todo App</span>
 												</span>
 											</span>
 										</span>
