--- a/works_creative.html
+++ b/works_creative.html
@@ -264,7 +264,7 @@
 
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/Facebook-Clone/" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://anthonys1760.github.io/Facebook-Redesign/" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/facebookclone.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
