--- a/works_creative.html
+++ b/works_creative.html
@@ -187,6 +187,8 @@
 					
 					<!-- portfolio items -->
 					<div class="box-items portfolio-items">
+
+
 						<div class="box-item f-gallery">
 							<div class="image">
 								<a href="https://anthonys1760.github.io/myTunes-Landing-Page/" target="_blank" class="has-popup-gallery hover-animated">
@@ -212,7 +214,6 @@
 							</div>
 						</div>
 
-					<div class="box-items portfolio-items">
 						<div class="box-item f-gallery">
 							<div class="image">
 								<a href="https://anthonys1760.github.io/Netflix-Landing-Page-Redesign/" target="_blank" class="has-popup-gallery hover-animated">
@@ -237,6 +238,8 @@
 								</div>	
 							</div>
 						</div>
+						
+
 
 						<div class="box-item f-gallery">
 							<div class="image">
@@ -603,6 +606,31 @@
 												<span class="desc">
 													<span class="category">Project</span>
 													<span class="name">Todo App</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+								<div id="gallery-1" class="mfp-hide">
+									<a href="images/work1.jpg"></a>
+									<a href="images/work2.jpg"></a>
+									<a href="images/work3.jpg"></a>
+									<a href="images/work4.jpg"></a>
+								</div>	
+							</div>
+						</div>
+
+						<div class="box-item f-gallery">
+							<div class="image">
+								<a href="https://anthonys1760.github.io/Simple-Calculator/" target="_blank" class="has-popup-gallery hover-animated">
+									<img src="images/calculator.jpg" class="wp-post-image" alt="" />
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-images"></span>
+												<span class="desc">
+													<span class="category">Project</span>
+													<span class="name">JavaScript Calculator</span>
 												</span>
 											</span>
 										</span>
