--- a/works_creative.html
+++ b/works_creative.html
@@ -190,6 +190,31 @@
 
 						<div class="box-item f-gallery">
 							<div class="image">
+								<a href="https://anthonys1760.github.io/News-Grid-Website/" target="_blank" class="has-popup-gallery hover-animated">
+									<img src="images/newsgridresponsive.jpg" class="wp-post-image" alt="" />
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-images"></span>
+												<span class="desc">
+													<span class="category">Project</span>
+													<span class="name">News Grid Inc.</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+								<div id="gallery-1" class="mfp-hide">
+									<a href="images/work1.jpg"></a>
+									<a href="images/work2.jpg"></a>
+									<a href="images/work3.jpg"></a>
+									<a href="images/work4.jpg"></a>
+								</div>	
+							</div>
+						</div>
+
+						<div class="box-item f-gallery">
+							<div class="image">
 								<a href="https://anthonys1760.github.io/Edgeledger_Website/" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/responseimage.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
