--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 	<link rel="stylesheet" href="css/solid.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 
+	<!-- Favicon  -->
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
+
 	 
 	<!--<link rel="stylesheet" href="css/theme-colors/blue.css" />
 	<link rel="stylesheet" href="css/theme-colors/green.css" />
