--- a/works_creative.html
+++ b/works_creative.html
@@ -216,16 +216,17 @@
 							</div>
 						</div>
 
+						<!-- RSVP App  -->
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://rsvpapp-lgq94gija.now.sh/" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://github.com/anthonys1760/rsvpapp" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/responsive3.png" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Project</span>
+													<span class="category">Web Application</span>
 													<span class="name">RSVP App</span>
 												</span>
 											</span>
@@ -241,16 +242,17 @@
 							</div>
 						</div>
 
+						<!-- JS Drum Machine -->
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/JS-Drum-Machine/" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://github.com/anthonys1760/JS-Drum-Machine" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/responsive4.png" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Project</span>
+													<span class="category">Web Application</span>
 													<span class="name">JS Drum Machine</span>
 												</span>
 											</span>
@@ -269,7 +271,7 @@
 						<!-- Movie Seat Booking -->
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/Movie-Seat-Booking-App/" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://github.com/anthonys1760/Movie-Seat-Booking-App" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/movieseat.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
@@ -295,7 +297,7 @@
 						<!-- Breakout Game -->
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/Breakout-Game/" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://github.com/anthonys1760/Breakout-Game" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/breakoutgame.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
@@ -321,7 +323,7 @@
 						<!-- Relaxation App -->
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/Relaxer-App/" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://github.com/anthonys1760/Relaxer-App" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/relaxation.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
@@ -347,7 +349,7 @@
 						<!-- Loan Calc -->
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/Loan-Calculator/" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://github.com/anthonys1760/Loan-Calculator" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/loancalc.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
@@ -373,7 +375,7 @@
 						<!-- Speed Typing Game -->
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/Typing-Game/" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://github.com/anthonys1760/Typing-Game" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/Speed Typer.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
@@ -425,7 +427,7 @@
 						<!-- Shopping Cart -->
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/JavaScript-Shopping-Cart/store.html" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://github.com/anthonys1760/JavaScript-Shopping-Cart" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/shoppingcart.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
@@ -450,7 +452,7 @@
 
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/jsandcssclock/" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://github.com/anthonys1760/jsandcssclock" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/responsive8.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
@@ -473,16 +475,17 @@
 							</div>
 						</div>
 
+					    <!-- Todo App -->
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/Todo-App/" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://github.com/anthonys1760/Todo-App" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/todo.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Project</span>
+													<span class="category">Web Application</span>
 													<span class="name">Todo App</span>
 												</span>
 											</span>
@@ -500,14 +503,14 @@
 
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/Simple-Calculator/" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://github.com/anthonys1760/Simple-Calculator" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/calculator.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Project</span>
+													<span class="category">Web Application</span>
 													<span class="name">JavaScript Calculator</span>
 												</span>
 											</span>
@@ -532,7 +535,7 @@
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Project</span>
+													<span class="category">Web Application</span>
 													<span class="name">MileTracker App</span>
 												</span>
 											</span>
