--- a/works_creative.html
+++ b/works_creative.html
@@ -501,6 +501,7 @@
 							</div>
 						</div>
 
+						<!-- Calculator -->
 						<div class="box-item f-gallery">
 							<div class="image">
 								<a href="https://github.com/anthonys1760/Simple-Calculator" target="_blank" class="has-popup-gallery hover-animated">
@@ -526,6 +527,7 @@
 							</div>
 						</div>
 
+						<!-- Miletracker -->
 						<div class="box-item f-gallery">
 							<div class="image">
 								<a href="https://github.com/anthonys1760/jQuery-Mobile-App" target="_blank" class="has-popup-gallery hover-animated">
@@ -550,8 +552,6 @@
 								</div>	
 							</div>
 						</div>
-
-
 
 					</div>
 					
@@ -589,6 +589,7 @@
 					<!-- Responsive Websites -->
 					<div class="box-items portfolio-items">
 
+						<!-- Newyear Countdown -->
 						<div class="box-item f-gallery">
 							<div class="image">
 								<a href="https://github.com/anthonys1760/New-Year-Count-Down" target="_blank" class="has-popup-gallery hover-animated">
@@ -614,10 +615,10 @@
 							</div>
 						</div>
 
-
+						<!-- News Grid -->
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/News-Grid-Website/" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://github.com/anthonys1760/News-Grid-Website" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/newsgridresponsive.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
@@ -640,9 +641,10 @@
 							</div>
 						</div>
 
+						<!-- EdgeLedger Website -->
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/Edgeledger_Website/" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://github.com/anthonys1760/Edgeledger_Website" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/responseimage.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
@@ -665,10 +667,10 @@
 							</div>
 						</div>
 
-
+						<!-- Hotel Website -->
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/Hotel-Website/" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://github.com/anthonys1760/Hotel-Website" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/responsive3456.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
@@ -691,9 +693,10 @@
 							</div>
 						</div>
 
+						<!-- myTunes Landing Page -->
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/myTunes-Landing-Page/" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://github.com/anthonys1760/myTunes-Landing-Page" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/mytunes.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
@@ -716,9 +719,10 @@
 							</div>
 						</div>
 
+						<!-- Netflix Landing Page -->
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/Netflix-Landing-Page-Redesign/" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://github.com/anthonys1760/Netflix-Landing-Page-Redesign" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/responsive.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
@@ -745,7 +749,7 @@
 
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/bootstrap4-responsive-project/" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://github.com/anthonys1760/bootstrap4-responsive-project" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/bootstrapresponsive.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
@@ -770,7 +774,7 @@
 
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/parallax-website/" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://github.com/anthonys1760/parallax-website" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/parallax.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
@@ -795,7 +799,7 @@
 
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/Facebook-Redesign/" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://github.com/anthonys1760/Facebook-Redesign" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/facebookclone.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
@@ -820,7 +824,7 @@
 
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/ColorGame/" target="_blank"class="has-popup-gallery hover-animated">
+								<a href="https://github.com/anthonys1760/ColorGame" target="_blank"class="has-popup-gallery hover-animated">
 									<img src="images/responsive.png" class="wp-post-image" width="100px" height="100px" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
@@ -870,7 +874,7 @@
 
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://fylo-dark.now.sh/" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://github.com/anthonys1760/Fylo-Dark" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/responsive2.png" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
