Updated Instagram links and Title

--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
 								and Designer based in Grand Rapids, Michigan. 
 							</h1>
 							<div class="h-subtitle typing-subtitle">
-								<p>Hello. </p>
+								<p>Hello :) </p>
 									<p>Welcome to my <strong>Portfolio </strong></p>
-									<p>My name is <strong>Anthony Smith</strong></p>
-									<p>I code cool <strong>websites</strong></p>
-									<p>I develop <strong>web apps</strong></p>
+									<p>My name is <strong>Anthony</strong></p>
+									<p>I code professional <strong>websites</strong></p>
+									<p>I develop useful <strong>web apps</strong></p>
 									<p>I love <strong>javascript</strong></p>
 									<p>I learn <strong>everyday</strong></p>
 									<p>I solve <strong>problems</strong></p>
@@ -179,7 +179,7 @@
 					<a target="_blank" href="https://github.com/anthonys1760?tab=repositories">
 						<span class="icon fab fa-github"></span>
 					</a>
-					<a target="_blank" href="https://www.instagram.com/">
+					<a target="_blank" href="https://www.instagram.com/tonycodes2059">
 						<span class="icon fab fa-instagram"></span>
 					</a>
 				</div>
