--- a/works_creative.html
+++ b/works_creative.html
@@ -219,7 +219,7 @@
 						<!-- Explore Vidz Search -->
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/Explore-Vidz-Search-App/" target="_blank" class="has-popup-gallery hover-animated">
+								<a href="https://github.com/anthonys1760/Explore-Vidz-Search-App" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/explorevidzresponse.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
@@ -565,6 +565,31 @@
 												<span class="desc">
 													<span class="category">Web Application</span>
 													<span class="name">MileTracker App</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+								<div id="gallery-1" class="mfp-hide">
+									<a href="images/work1.jpg"></a>
+									<a href="images/work2.jpg"></a>
+									<a href="images/work3.jpg"></a>
+									<a href="images/work4.jpg"></a>
+								</div>	
+							</div>
+						</div>
+
+						<div class="box-item f-gallery">
+							<div class="image">
+								<a href="https://anthonys1760.github.io/htmlemail3/" target="_blank" class="has-popup-gallery hover-animated">
+									<img src="images/responsive7.png" class="wp-post-image" alt="" />
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-images"></span>
+												<span class="desc">
+													<span class="category">Web Email</span>
+													<span class="name">HTML Email</span>
 												</span>
 											</span>
 										</span>
@@ -1029,30 +1054,7 @@
 							</div>
 						</div>
 
-						<div class="box-item f-gallery">
-							<div class="image">
-								<a href="https://anthonys1760.github.io/htmlemail3/" target="_blank" class="has-popup-gallery hover-animated">
-									<img src="images/responsive7.png" class="wp-post-image" alt="" />
-									<span class="info circle">
-										<span class="centrize full-width">
-											<span class="vertical-center">
-												<span class="icon fas fa-images"></span>
-												<span class="desc">
-													<span class="category">Javascript Project</span>
-													<span class="name">HTML Email</span>
-												</span>
-											</span>
-										</span>
-									</span>
-								</a>
-								<div id="gallery-1" class="mfp-hide">
-									<a href="images/work1.jpg"></a>
-									<a href="images/work2.jpg"></a>
-									<a href="images/work3.jpg"></a>
-									<a href="images/work4.jpg"></a>
-								</div>	
-							</div>
-						</div>
+					
 
 					
 
