--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 								and Designer based in Grand Rapids, Michigan. 
 							</h1>
 							<div class="h-subtitle typing-subtitle">
-								<p>Hello :) </p>
+								<p>Hello. </p>
 									<p>Welcome to my <strong>Portfolio </strong></p>
 									<p>My name is <strong>Anthony</strong></p>
 									<p>I code professional <strong>websites</strong></p>
