Added BlogCentral Dashboard to Portfolio

--- a/works_creative.html
+++ b/works_creative.html
@@ -192,6 +192,8 @@
 					<!-- Responsive Websites -->
 					<div class="box-items portfolio-items">
 
+						
+
 						<!-- Mizuxe Book Theme -->
 						<div class="box-item f-gallery">
 							<div class="image">
@@ -204,6 +206,34 @@
 												<span class="desc">
 													<span class="category">Responsive Website</span>
 													<span class="name">Mizuxe Book Release</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+								<div id="gallery-1" class="mfp-hide">
+									<a href="images/work1.jpg"></a>
+									<a href="images/work2.jpg"></a>
+									<a href="images/work3.jpg"></a>
+									<a href="images/work4.jpg"></a>
+								</div>	
+							</div>
+						</div>
+
+						<!-- BlogCentral Dashboard -->
+						<div class="box-item f-gallery">
+							<div class="image">
+								<a href="https://github.com/anthonys1760/BlogCentral" target="_blank" class="has-popup-gallery hover-animated">
+									<img src="images/responsivedashboard.jpg" class="wp-post-image" alt="" />
+									<div class="d-sm-none">
+												</div>
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-images"></span>
+												<span class="desc">
+													<span class="category">Responsive Website</span>
+													<span class="name">BlogCentral Dashboard</span>
 												</span>
 											</span>
 										</span>
