--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
 		
 		<!-- Wrapper -->
 		<div class="wrapper">	
+			<!-- Testing -->
 
 			<!-- Section Started -->
 			<div class="section started" id="section-started">
